# clubmessenger

./: .gitignore  LICENSE  LICENSE.txt  README.md  build_desktop.spec  clubmessenger_core.py  gitignore  installer.nsi  main.py  main_desktop.py  privacy_policy.md  pyproject.toml  run_build.bat
