[project]
name = "clubmessenger"
version = "1.3.3"
description = "Messagerie ciblée pour club de plongée FFESSM (Android, via Flet)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "CS-DEV (Cédric SALVAT)" },
]
license = { text = "Proprietary" }
keywords = ["flet", "android", "ffessm", "plongée", "messagerie"]

dependencies = [
    "flet==0.85.2",
]

# ──────────────────────────────────────────────────────────────────────────────
# Configuration Flet (build APK / AAB / desktop)
# Doc : https://flet.dev/docs/publish/
# ──────────────────────────────────────────────────────────────────────────────
[tool.flet]
org             = "fr.csdev"
product         = "ClubMessenger"
company         = "CS-DEV"
copyright       = "Copyright © 2025 CS-DEV"

# Icône (utilisée par Flet pour générer toutes les tailles)
icon            = "assets/icon.png"
build_number = 1302

[tool.flet.app]
path = "."

# ──────────────────────────────────────────────────────────────────────────────
# Android
# ──────────────────────────────────────────────────────────────────────────────
[tool.flet.android]
bundle_id = "fr.csdev.clubmessenger"
adaptive_icon_background  = "#0B5394"
# Si tu veux séparer foreground/background pour l'adaptive icon Android :
# adaptive_icon_foreground = "assets/icon_foreground.png"
permissions = [
    "android.permission.INTERNET",
    "android.permission.READ_EXTERNAL_STORAGE",
    "android.permission.READ_MEDIA_DOCUMENTS",
    "android.permission.READ_MEDIA_IMAGES",
    "android.permission.SEND_SMS",
	"android.permission.CALL_PHONE",
]

# ──────────────────────────────────────────────────────────────────────────────
# iOS (facultatif, pour plus tard)
# ──────────────────────────────────────────────────────────────────────────────
[tool.flet.ios]
bundle_id = "fr.csdev.club_messenger"

# ──────────────────────────────────────────────────────────────────────────────
# Build system
# ──────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["flet>=0.85.2,<0.86"]
build-backend = "flet.build"
